--- a/index.html
+++ b/index.html
@@ -1,3 +1,88 @@
-<h1>Mi portfolio</h1>
-<p>modificando en el repositorio remoto</p>
-<p>modificando en el repositorio remoto2</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Diego Rojas">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Diego Rojas</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="card mat-card" id="first-card">
+        <div id="profile-background"><img src="img/bg.jpg"></div>
+        <div id="info" style="padding: 16px">
+            <div id="info-img">
+                <img class="profile-image" src="img/profile.jpg">
+                <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+            </div>
+            <div id="info-data">
+                <div>
+                    <h1>Diego Rojas</h1>
+                    <div id="info-company">Desarrollador Full Stack Jr</div>
+                    <div id="info-contact">
+                        <span>Buenos Aires (Argentina)</span>
+                        <span><a href="#">Información de contacto</a></span>
+                    </div>
+                </div>
+                <ul id="info-details">
+                    <li><a href="#">
+                        <img src="img/teclab.jpg">
+                        <h2>Teclab</h2>
+                    </a></li>
+                    <li><a href="#">
+                        <img src="img/santex.jpg">
+                        <h2>Santex</h2>
+                    </a></li>
+                </ul>
+            </div>
+            <div id="info-actions">
+                <button type="button" class="btn btn-primary">Tengo interés en</button>
+                <button type="button" class="btn btn-light">Añadir Sección</button>
+                <button type="button" class="btn btn-light">Más</button>
+            </div>
+        </div>
+    </div>
+    <div class="card mat-card">
+        <div class="card-titles">
+            <h2>Acerca de</h2>
+            <div class="btn-edit" onclick="cambiar_parrafo()">
+                <a href="#" class="btn-right">
+                    <i class="fa fa-pen"></i>
+                </a>
+            </div>
+        </div>
+        <div>
+            <p id="text-acercade">Texto con breve descripción sobre mi persona</p>
+        </div>
+        <div>
+            <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
+        </div>
+    </div>
+    <script>
+        function cambiar_parrafo(){
+            document.getElementById("edit-acercade").style.display="block";
+            let texto = document.getElementById("text-acercade").innerText;
+            console.log(texto);
+        };
+
+        function myFunction2(valor){
+            document.getElementById("text-acercade").innerText=valor;
+        };
+
+        function logMessage(message){
+            console.log(message + "<br>");
+        }
+        let textarea=document.getElementById("edit-acercade")
+        textarea.addEventListener('keyup', (e) => {
+            logMessage(`Key "${e.key}" released [event: keyup]`);
+            if (e.key=="Enter"){
+                document.getElementById("edit-acercade").style.display="none"
+            }
+        });
+    </script>
+</body>
+</html>
