--- a/index.html
+++ b/index.html
@@ -62,6 +62,42 @@
             <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
         </div>
     </div>
+    <div class="card mat-card">
+        <div class="card-titles">            
+            <h2>Experiencia</h2>            
+        </div>
+        <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+        <div>
+            <p id="text-acercade">Texto con breve descripción sobre mi Experiencia</p>
+        </div>
+    </div>
+    <div class="card mat-card">
+        <div class="card-titles">
+            <h2>Educacion</h2>
+            <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+        </div>
+        <div>
+            <p id="text-acercade">Texto con breve descripción sobre mi Educacion</p>
+        </div>
+    </div>
+    <div class="card mat-card">
+        <div class="card-titles">
+            <h2>Aptitudes y validaciones</h2>
+            <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+        </div>
+        <div>
+            <p id="text-acercade">Texto con breve descripción sobre mi Aptitudes y validaciones</p>
+        </div>
+    </div>
+    <div class="card mat-card">
+        <div class="card-titles">
+            <h2>Logros</h2>
+            <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+        </div>
+        <div>
+            <p id="text-acercade">Texto con breve descripción sobre mi Logros</p>
+        </div>
+    </div>
     <script>
         function cambiar_parrafo(){
             document.getElementById("edit-acercade").style.display="block";
